<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployerActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_employer_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/add_employer_button"
        android:onClick="addEmployer" />

    <EditText
        android:id="@+id/add_employer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/add_employer_hint" />

    <Spinner
        android:id="@+id/remove_employers_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_employer_text"
        android:layout_below="@+id/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remove_employers_spinner"
        android:layout_centerHorizontal="true"
        android:onClick="removeEmployer"
        android:text="@string/remove_employer_button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="52dp"
        android:onClick="backToMain"
        android:text="@string/add_employer_back_button" />

</RelativeLayout>